Prepare tests and CI for the stable test JDK (#8396)
* Prepare test scaffolds for JDK 25

* Generalize JDK override guardrails

* Reference ci.json for test JDK guardrails

* Run metadata CI on matrix GraalVM JDK

* Fix netty-pkitesting test for JDK 25